Fix file separation issue